# trusted-xuper-rust-sdk

./: Cargo.toml  Makefile  README.md
app/: Cargo.toml  build.rs
app/src/: main.rs
doc/: arch.drawio
enclave/: Cargo.toml  Enclave.edl  Makefile
enclave/src/: config.rs  contract.rs  encoder.rs  lib.rs  session.rs  transfer.rs  wallet.rs
enclave/src/protos/: chainedbft.rs  xchain.rs  xendorser.rs
sdk-sgx-test/: Makefile
sdk-sgx-test/app/: Cargo.toml  build.rs
sdk-sgx-test/app/src/: main.rs
sdk-sgx-test/enclave/: Cargo.toml  Enclave.edl
sdk-sgx-test/enclave/src/: .lib.rs.swp  lib.rs
trusted-mesatee-sdk/mesatee_core/src/config/: mod.rs
trusted-mesatee-sdk/mesatee_core/src/rpc/sgx/: client.rs
trusted-mesatee-sdk/mesatee_sdk/src/: lib.rs
trusted-mesatee-sdk/release/services/: enclave_info.toml  runtime.config.toml
trusted-mesatee-sdk/release/services/auditors/albus_dumbledore/: albus_dumbledore.sign.sha256
trusted-mesatee-sdk/release/services/auditors/godzilla/: godzilla.sign.sha256
trusted-mesatee-sdk/release/services/auditors/optimus_prime/: optimus_prime.sign.sha256
xchain-client-sdk/: Cargo.toml
xchain-client-sdk/conf/: sdk.yaml
xchain-client-sdk/src/: consts.rs  contract.rs  encoder.rs  errors.rs  lib.rs  session.rs  teesdk.rs  transfer.rs  wallet.rs
xchain-client-sdk/src/protos/: xchain.rs
xchain-crypto/: Cargo.toml
xchain-crypto/src/account/: address.rs
xchain-crypto/src/ec/suite_b/: ecies.rs
xchain-crypto/src/hdwallet/: languages.rs  rand.rs
xchain-node-sdk/: Cargo.toml  build.rs
xchain-node-sdk/src/: encoder.rs  lib.rs  ocall.rs  xchain.rs
xchain-node-sdk/src/protos/: xchain.rs
