[package]
name = "run-tests-enclave"
version = "1.0.0"
edition = "2018"

[lib]
name = "run_tests_enclave"
crate-type = ["staticlib"]

[features]
default = ["mesalock_sgx", "with-serde"]
with-serde = []
mesalock_sgx = ["sgx_tstd"]


# [dependencies]
# xchain_crypto    = { path = "../xchain-crypto"}
# rand             = "0.7.3"
# rand_core        = "0.5.1"
# hex              = "0.4.0"
# protobuf         = { version = "2.14.0", features = ["with-serde"] }
# serde_json       = "1.0.40"
# serde_yaml       = "0.8"
# serde_derive     = "1.0.104"
# serde            = { version = "1.0.104", features = ["derive"]}
# lazy_static      = "1.1.1"
# num-bigint       = { version = "0.2.3", features = ["serde"] }
# num-traits       = "0.2.10"

[dependencies]
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx"}
xchain_crypto    = { path = "../xchain-crypto"}
#xchain_node_sdk  = { path = "../xchain-node-sdk"}
rand            = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.2" }
rand_core       = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.2" }
hex             = { git = "https://github.com/mesalock-linux/rust-hex-sgx" }
#protobuf        = { git = "https://github.com/mesalock-linux/rust-protobuf-sgx", branch = "v2.8", features = ["with-serde"] }
protobuf         = { path = "../third_party/protobuf-2.14.0", features = ["with-serde"] }
serde_json      =  { git = "https://github.com/mesalock-linux/serde-json-sgx" }
serde_derive    = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde           = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_repr      = "0.1"
serde_yaml      = { path = "../third_party/serde_yaml-0.8.12" }
lazy_static     = { version = "1.2", features = ["spin_no_std"] }
num-bigint      = { git = "https://github.com/mesalock-linux/num-bigint-sgx", features = ["serde"] }
num-traits      = { git = "https://github.com/mesalock-linux/num-traits-sgx" }
sgx_types       = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto     = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_tstd        = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional=true  }

