[package]
name = "xuper-client-sdk"
version = "0.1.0"
authors = ["duanbing <duanbing@baidu.com>"]
edition = "2018"

[dependencies]
xchain_crypto    = { path = "../xchain-crypto"}
xchain_node_sdk    = { path = "../xchain-node-sdk"}

rand             = "0.7.3"
rand_core        = "0.5.1"

hex              = "0.4.0"
protobuf         = { version = "2.14.0", features = ["with-serde"] }
serde_json       = "1.0.40"

num-bigint       = { version = "0.2.3", features = ["serde"] }
num-traits       = "0.2.10"
