[package]
name = "xuper-client-sdk"
version = "0.1.0"
authors = ["duanbing <duanbing@baidu.com>"]
edition = "2018"

[features]
default = ["with-serde"]
with-serde = []

[dependencies]
xchain_crypto    = { path = "../xchain-crypto"}
xchain_node_sdk  = { path = "../xchain-node-sdk"}

rand             = "0.7.3"
rand_core        = "0.5.1"

hex              = "0.4.0"
protobuf         = { version = "2.14.0", features = ["with-serde"] }
serde_json       = "1.0.40"
serde_yaml       = "0.8"
serde_derive     = "1.0.104"
serde            = { version = "1.0.104", features = ["derive"]}
lazy_static      = "1.1.1"

num-bigint       = { version = "0.2.3", features = ["serde"] }
num-traits       = "0.2.10"
